// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcCurrencyInput > $attrs > should use data-test attribute to prefix all data-test attributes in bottom note 1`] = `
<div
  class="ec-currency-input__bottom-note ec-currency-input__bottom-note--is-warning"
  data-test="my-component__bottom-note ec-currency-input__bottom-note"
>
  <span>
    Test Bottom Note
  </span>
  <svg
    class="ec-icon ec-icon--warning ec-currency-input__warning-tooltip"
    data-ec-tooltip-mock-content="Test Warning Tooltip"
    data-test="my-component__warning-tooltip ec-currency-input__warning-tooltip ec-mock ec-tooltip-mock"
    height="14"
    width="14"
  >
    <use
      xlink:href="#ec-simple-error"
    />
  </svg>
</div>
`;

exports[`EcCurrencyInput > $attrs > should use data-test attribute to prefix all data-test attributes in error message 1`] = `
<div
  class="ec-currency-input__error-text"
  data-test="my-component__error-text ec-currency-input__error-text"
  id="ec-currency-input-field-1"
>
  <span>
    Test Error Message
  </span>
  <svg
    class="ec-icon ec-icon--error ec-currency-input__error-tooltip"
    data-ec-tooltip-mock-content="Test Error Tooltip"
    data-test="my-component__error-tooltip ec-currency-input__error-tooltip ec-mock ec-tooltip-mock"
    height="14"
    width="14"
  >
    <use
      xlink:href="#ec-simple-error"
    />
  </svg>
</div>
`;

exports[`EcCurrencyInput > $attrs > should use data-test attribute to prefix all data-test attributes in label > label 1`] = `
<span
  class="ec-currency-input__label-text"
  data-test="my-component__label-text ec-currency-input__label-text"
>
  Test Input
</span>
`;

exports[`EcCurrencyInput > $attrs > should use data-test attribute to prefix all data-test attributes in label > note 1`] = `
<span
  class="ec-currency-input__note"
  data-test="my-component__note ec-currency-input__note"
>
  Test Note
</span>
`;

exports[`EcCurrencyInput > $attrs > should use data-test attribute to prefix all data-test attributes in nested components 1`] = `
<div
  class="ec-currency-input"
  data-test="my-component"
>
  <!--v-if-->
  <div
    class="ec-currency-input__input-group"
  >
    <div
      class="ec-currency-input__currencies ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-right ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
            data-test="my-component__currencies ec-currency-input__currencies ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
            id="ec-currency-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <!--v-if-->
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-chevron-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list my-component__currencies-list ec-currency-input__currencies-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="GBP"
            >
              
              GBP
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="EUR"
            >
              
              EUR
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="USD"
            >
              
              USD
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="JPY"
            >
              
              JPY
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <div
      class="ec-input-field ec-currency-input__amount"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        autocomplete="off"
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-left"
        data-test="my-component__amount ec-currency-input__amount ec-amount-input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-3"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCurrencyInput > $attrs > should use data-test attribute with multiple values to prefix all data-test attributes in nested components 1`] = `
<div
  class="ec-currency-input"
  data-test="my-component my-other-component"
>
  <!--v-if-->
  <div
    class="ec-currency-input__input-group"
  >
    <div
      class="ec-currency-input__currencies ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-right ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
            data-test="my-component__currencies my-other-component__currencies ec-currency-input__currencies ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
            id="ec-currency-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <!--v-if-->
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-chevron-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list my-component__currencies-list my-other-component__currencies-list ec-currency-input__currencies-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="GBP"
            >
              
              GBP
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="EUR"
            >
              
              EUR
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="USD"
            >
              
              USD
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="JPY"
            >
              
              JPY
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <div
      class="ec-input-field ec-currency-input__amount"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        autocomplete="off"
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-left"
        data-test="my-component__amount my-other-component__amount ec-currency-input__amount ec-amount-input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-3"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCurrencyInput > :props > should render a loading state when currenciesLoading is set true 1`] = `
<ec-stub
  autosize="min"
  class="ec-dropdown-search__trigger"
  data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
  disabled="false"
  distance="8"
  placement="bottom-start"
  popperclass="ec-dropdown-search__popover"
  shift="false"
  shown="false"
>
  
  
  <div
    class="ec-input-field"
    data-test="ec-input-field"
  >
    <!--v-if-->
    <input
      class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-right ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
      data-test="ec-currency-input__currencies ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
      id="ec-currency-input-field-1"
      placeholder=""
      readonly=""
      type="text"
    />
    <!--v-if-->
    <div
      class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
      data-test="ec-input-field__icon-wrapper"
    >
      <!--v-if-->
      <svg
        class="ec-icon ec-input-field__icon"
        data-test="ec-input-field__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </div>
    <!--v-if-->
  </div>
  
  
  
  <div>
    <ul
      class="ec-dropdown-search__item-list"
      data-test="ec-dropdown-search__item-list ec-currency-input__currencies-list"
    >
      <li
        class="ec-dropdown-search__search-area"
        data-test="ec-dropdown-search__search-area"
      >
        <svg
          class="ec-icon ec-dropdown-search__search-icon"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
        <input
          autocomplete="off"
          class="ec-dropdown-search__search-input"
          data-test="ec-dropdown-search__search-input"
          placeholder="Search..."
        />
      </li>
      <!--v-if-->
      <li>
        <div
          class="ec-loading"
          data-test="ec-loading"
        >
          <div
            class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
            data-test="ec-loading__backdrop"
          >
            <svg
              class="ec-icon ec-loading__icon"
              data-test="ec-loading__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-loading"
              />
            </svg>
          </div>
          <div
            class="ec-loading__content ec-loading__content--is-transparent"
            data-test="ec-loading__content"
          >
            
            <div
              class="ec-dropdown-search__loading"
              data-test="ec-dropdown-search__loading"
            />
            
          </div>
        </div>
      </li>
    </ul>
  </div>
  
</ec-stub>
`;

exports[`EcCurrencyInput > :props > should render the component with the dropdown part disabled when isCurrenciesDisabled is set true 1`] = `
<div
  class="ec-currency-input__currencies ec-currency-input__currencies--is-disabled"
  data-test="ec-currency-input__currencies ec-mock ec-tooltip-mock"
>
  EUR
</div>
`;

exports[`EcCurrencyInput > :props > should render the component with the input disabled when isAmountDisabled is set true 1`] = `
<input
  autocomplete="off"
  class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-left"
  data-test="ec-currency-input__amount ec-amount-input ec-input-field__input ec-mock ec-tooltip-mock"
  disabled=""
  id="ec-input-field-3"
  type="text"
/>
`;

exports[`EcCurrencyInput > :props > should render the label when the label is given 1`] = `
<span
  class="ec-currency-input__label-text"
  data-test="ec-currency-input__label-text"
>
  Currency Input
</span>
`;

exports[`EcCurrencyInput > :props > should render the non-results message passed as prop if no currency matches the typed one 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list ec-currency-input__currencies-list"
>
  <li
    class="ec-dropdown-search__search-area"
    data-test="ec-dropdown-search__search-area"
  >
    <svg
      class="ec-icon ec-dropdown-search__search-icon"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
    <input
      autocomplete="off"
      class="ec-dropdown-search__search-input"
      data-test="ec-dropdown-search__search-input"
      placeholder="Search..."
    />
  </li>
  <!--v-if-->
  
  <li
    class="ec-dropdown-search__no-items"
    data-test="ec-dropdown-search__no-items"
    title="No currencies text"
  >
    No currencies text
  </li>
  
</ul>
`;

exports[`EcCurrencyInput > :props > should render the note when the note is given 1`] = `
<span
  class="ec-currency-input__note"
  data-test="ec-currency-input__note"
>
  Random note
</span>
`;

exports[`EcCurrencyInput > :props > should render the searching field with the placeholder message passed as prop 1`] = `
<input
  autocomplete="off"
  class="ec-dropdown-search__search-input"
  data-test="ec-dropdown-search__search-input"
  placeholder="Search currency placeholder"
/>
`;

exports[`EcCurrencyInput > :props > should render without any currencies if the currencies prop is empty 1`] = `
<div
  class="ec-currency-input__currencies ec-dropdown ec-dropdown-search"
  data-test="ec-dropdown ec-dropdown-search"
>
  <ec-stub
    autosize="min"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-right ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
        data-test="ec-currency-input__currencies ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-currency-input-field-1"
        placeholder=""
        readonly=""
        type="text"
      />
      <!--v-if-->
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list ec-currency-input__currencies-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcCurrencyInput > should render properly 1`] = `
<div
  class="ec-currency-input"
>
  <!--v-if-->
  <div
    class="ec-currency-input__input-group"
  >
    <div
      class="ec-currency-input__currencies ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-right ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
            data-test="ec-currency-input__currencies ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
            id="ec-currency-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <!--v-if-->
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-chevron-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list ec-currency-input__currencies-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="GBP"
            >
              
              GBP
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="EUR"
            >
              
              EUR
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="USD"
            >
              
              USD
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="JPY"
            >
              
              JPY
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <div
      class="ec-input-field ec-currency-input__amount"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        autocomplete="off"
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-left"
        data-test="ec-currency-input__amount ec-amount-input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-3"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCurrencyInput > should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-currency-input"
>
  <!--v-if-->
  <div
    class="ec-currency-input__input-group"
  >
    <div
      class="ec-currency-input__currencies ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-right ec-input-field__input--has-icon my-sensitive-content-test-class ec-input-field__input--cursor-pointer"
            data-test="ec-currency-input__currencies ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
            id="ec-currency-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <!--v-if-->
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-chevron-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list my-sensitive-content-test-class"
            data-test="ec-dropdown-search__item-list ec-currency-input__currencies-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="GBP"
            >
              
              GBP
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="EUR"
            >
              
              EUR
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="USD"
            >
              
              USD
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="JPY"
            >
              
              JPY
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <div
      class="ec-input-field ec-currency-input__amount"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        autocomplete="off"
        class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-left my-sensitive-content-test-class"
        data-test="ec-currency-input__amount ec-amount-input ec-input-field__input ec-mock ec-tooltip-mock"
        id="ec-input-field-3"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCurrencyInput > when the bottom note is defined > and it is a warning note > and there is a warning message defined > should render properly 1`] = `
<div
  class="ec-currency-input__bottom-note ec-currency-input__bottom-note--is-warning"
  data-test="ec-currency-input__bottom-note"
>
  <span>
    Bottom note message
  </span>
  <svg
    class="ec-icon ec-icon--warning ec-currency-input__warning-tooltip"
    data-ec-tooltip-mock-content="Warning tooltip message"
    data-test="ec-currency-input__warning-tooltip ec-mock ec-tooltip-mock"
    height="14"
    width="14"
  >
    <use
      xlink:href="#ec-simple-error"
    />
  </svg>
</div>
`;

exports[`EcCurrencyInput > when the bottom note is defined > and it is a warning note > should render properly 1`] = `
<div
  class="ec-currency-input__bottom-note ec-currency-input__bottom-note--is-warning"
  data-test="ec-currency-input__bottom-note"
>
  <span>
    Bottom note message
  </span>
  <!--v-if-->
</div>
`;

exports[`EcCurrencyInput > when the bottom note is defined > should render properly 1`] = `
<div
  class="ec-currency-input__bottom-note"
  data-test="ec-currency-input__bottom-note"
>
  <span>
    Bottom note message
  </span>
  <!--v-if-->
</div>
`;

exports[`EcCurrencyInput > when the disabled currency selector has a tooltip associated > and the currency dropdown is not disabled > should render properly not including the tooltip 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-right ec-input-field__input--has-icon ec-input-field__input--cursor-pointer"
  data-test="ec-currency-input__currencies ec-dropdown__input ec-input-field__input ec-mock ec-tooltip-mock"
  id="ec-currency-input-field-1"
  placeholder=""
  readonly=""
  type="text"
/>
`;

exports[`EcCurrencyInput > when the disabled currency selector has a tooltip associated > should render properly 1`] = `
<div
  class="ec-currency-input__currencies ec-currency-input__currencies--is-disabled"
  data-ec-tooltip-mock-content="Tooltip message"
  data-ec-tooltip-mock-placement="top"
  data-test="ec-currency-input__currencies ec-mock ec-tooltip-mock"
>
  
</div>
`;

exports[`EcCurrencyInput > when the disabled currency selector has a tooltip associated > should render properly using the defined placement 1`] = `
<div
  class="ec-currency-input__currencies ec-currency-input__currencies--is-disabled"
  data-ec-tooltip-mock-content="Tooltip message"
  data-ec-tooltip-mock-placement="left"
  data-test="ec-currency-input__currencies ec-mock ec-tooltip-mock"
>
  
</div>
`;

exports[`EcCurrencyInput > when the error message is defined > and there is a tooltip message relative to the error defined > should render properly 1`] = `
<div
  class="ec-currency-input__error-text"
  data-test="ec-currency-input__error-text"
  id="ec-currency-input-field-1"
>
  <span>
    Random message
  </span>
  <svg
    class="ec-icon ec-icon--error ec-currency-input__error-tooltip"
    data-ec-tooltip-mock-content="Error tooltip message"
    data-test="ec-currency-input__error-tooltip ec-mock ec-tooltip-mock"
    height="14"
    width="14"
  >
    <use
      xlink:href="#ec-simple-error"
    />
  </svg>
</div>
`;

exports[`EcCurrencyInput > when the error message is defined > should render properly 1`] = `
<div
  class="ec-currency-input__error-text"
  data-test="ec-currency-input__error-text"
  id="ec-currency-input-field-1"
>
  <span>
    Random message
  </span>
  <!--v-if-->
</div>
`;

exports[`EcCurrencyInput > when the placeholder message for the amount input is defined > should render properly 1`] = `
<input
  autocomplete="off"
  class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--is-in-group-left"
  data-test="ec-currency-input__amount ec-amount-input ec-input-field__input ec-mock ec-tooltip-mock"
  id="ec-input-field-3"
  placeholder="Amount Placeholder"
  type="text"
/>
`;
